--- a/interface/client/templates/popupWindows/requestAccount.html
+++ b/interface/client/templates/popupWindows/requestAccount.html
@@ -7,7 +7,7 @@
                 <h2>{{i18n "mist.popupWindows.requestAccount.creating"}}</h2>
             {{else}}
                 <div class="field-container">
-                    <input type="text" placeholder="{{i18n 'mist.applicationMenu.file.newAccount'}}" class="account">
+                    <input type="text" placeholder="New Account Name" class="account">
                     <input type="{{passwordInputType}}" placeholder="{{i18n 'mist.popupWindows.requestAccount.enterPassword'}}" class="password">
                     <input type="{{passwordInputType}}" placeholder="{{i18n 'mist.popupWindows.requestAccount.repeatPassword'}}" class='password-repeat'>
                 </div>
