--- a/interface/client/templates/popupWindows/loadingWindow.html
+++ b/interface/client/templates/popupWindows/loadingWindow.html
@@ -1,5 +1,5 @@
 <template name="popupWindows_loadingWindow">
-    <div class="loading-window">
+    <div class="loading-window" style="background: white!important;">
         {{> spinner}}
     </div>
 </template>
