--- a/interface/client/templates/popupWindows/requestAccount.html
+++ b/interface/client/templates/popupWindows/requestAccount.html
@@ -1,23 +1,53 @@
 <template name="popupWindows_requestAccount">
-    <div class="popup-windows request-account">
+    <div class="popup-windows request-account" style="background: white;">
         <form action="#">
-            <h1>{{i18n "mist.popupWindows.requestAccount.title"}}</h1>
+            <h1 style="margin: 50px 0 50px!important; font-weight: bold;">{{i18n "mist.popupWindows.requestAccount.title"}}</h1>
 
             {{#if TemplateVar.get "creating"}}
-                <h2>{{i18n "mist.popupWindows.requestAccount.creating"}}</h2>
+                {{#if TemplateVar.get "created"}}
+                    <div class="createOk">
+                        <h3>Make sure you backup your KEYFILES and PASSWORD!</h3>
+                        <p class="creatPic1"></p>
+                        <h4>You can find your keyfiles folder using the main File -> Backup -> Accounts.<br>
+                            Keep a copy of the "keystore" folder where you can't lose it!</h4>
+
+                        <div class="dapp-modal-buttons" style="background: white!important;width: 75px;margin: 80px auto 0;">
+                            <button style=" color: #fff; width: 75px; height: 28px; line-height: 28px; border-radius: 50px; margin-left: 15px; background-image: linear-gradient(0deg, #1a90fc 0%, #00d2ff 100%);" type="submit" id="close-window">DONE</button>
+                        </div>
+                    </div>
+                {{else}}
+                    <h2>{{i18n "mist.popupWindows.requestAccount.creating"}}</h2>
+                {{/if}}
             {{else}}
                 <div class="field-container">
-                    <input type="text" placeholder="New Account Name" class="account">
-                    <input type="{{passwordInputType}}" placeholder="{{i18n 'mist.popupWindows.requestAccount.enterPassword'}}" class="password">
-                    <input type="{{passwordInputType}}" placeholder="{{i18n 'mist.popupWindows.requestAccount.repeatPassword'}}" class='password-repeat'>
+                    <div class="errorDiv">
+                        <input type="text" placeholder="New Account Name" class="account" style="background: white;">
+
+                        {{#if TemplateVar.get "accountLow"}}
+                            <p class="errorP">Please provide a valid account name</p>
+                        {{/if}}
+
+                    </div>
+                    <div class="errorDiv">
+                        <input type="{{passwordInputType}}" placeholder="{{i18n 'mist.popupWindows.requestAccount.enterPassword'}}" class="password" style="background: white;">
+                        {{#if TemplateVar.get "passwordLow"}}
+                            <p class="errorP">{{i18n "mist.popupWindows.requestAccount.errors.passwordTooShort"}}</p>
+                        {{/if}}
+                    </div>
+                    <div class="errorDiv">
+                        <input type="{{passwordInputType}}" placeholder="{{i18n 'mist.popupWindows.requestAccount.repeatPassword'}}" class='password-repeat' style="background: white;">
+                        {{#if TemplateVar.get "passwordRepat"}}
+                            <p class="errorP">{{i18n "mist.popupWindows.requestAccount.errors.passwordMismatch"}}</p>
+                        {{/if}}
+                    </div>
                 </div>
                 <div class="show-password-container">
-                    <input type="checkbox" name="elements_input_bool" class="show-password abi-input">
+                    <input type="checkbox" name="elements_input_bool" class="show-password abi-input" style="background: white;margin-left: 0!important;">
                     <label for="show-password">{{i18n "mist.popupWindows.onboarding.buttons.showPassword"}}</label>
                 </div>
-                <div class="dapp-modal-buttons">
-                    <button class="cancel" type="button">{{i18n "buttons.cancel"}}</button>
-                    <button class="ok dapp-primary-button" type="submit">{{i18n "buttons.ok"}}</button>
+                <div class="dapp-modal-buttons" style="background: white!important;width: 170px;margin: 50px auto 0;">
+                    <button class="cancel" type="button" style=" color: #c6cdb7; width: 75px; height: 26px; line-height: 26px; font-weight: 400; border: 1px solid #c6cdb7; border-radius: 50px; margin-right: 0;">{{i18n "buttons.cancel"}}</button>
+                    <button class="ok dapp-primary-button" style=" color: #fff; width: 75px; height: 28px; line-height: 28px; border-radius: 50px; margin-left: 15px; background-image: linear-gradient(0deg, #1a90fc 0%, #00d2ff 100%);" type="submit">{{i18n "buttons.ok"}}</button>
                 </div>
             {{/if}}
         </form>
