update style by wang

--- a/interface/client/styles/animations.import.less
+++ b/interface/client/styles/animations.import.less
@@ -96,6 +96,13 @@ aside.sidebar {
     color: red;
     //display: none;
 }
+.enterH3{
+    font-size: 12px!important;
+    text-transform: uppercase;
+    margin: 30px auto 0px;
+    color: #929cb8!important;
+    font-weight: bold;
+}
 .passwordPic{
     background: url("/images/pic3.jpg") no-repeat;
     background-size: 100%;
@@ -127,12 +134,24 @@ aside.sidebar {
     top: 35px;
     cursor: pointer;
 }
-.creatPic1{
-    background: url("/images/pic1.jpg") no-repeat;
+.showPassIco:hover{
+    background: url("/images/pic2L.jpg") no-repeat;
+    background-size: 100%;
+    width: 14px;
+    height: 10px;
+    display: block;
+    position: absolute;
+    right: 5px;
+    top: 35px;
+    cursor: pointer;
+}
+.passwordPic{
+    background: url("/images/pic3.jpg") no-repeat;
     background-size: 100%;
     width: 150px;
     height: 150px;
-    margin: 80px auto 25px;
+    margin: 80px auto 10px;
 }
+
 
 
