--- a/interface/client/templates/popupWindows/inputAccountPassword.html
+++ b/interface/client/templates/popupWindows/inputAccountPassword.html
@@ -1,12 +1,12 @@
 <template name="popupWindows_inputAccountPassword">
     <div class="popup-windows" style="background: white;">
         <form action="#">
-            <h1 style="margin: 50px 0 50px!important; font-weight: bold;">{{i18n "mist.popupWindows.unlockMasterPassword.title"}}</h1>
+            <h1 style="margin: 50px 0 10px!important; font-weight: bold;">{{i18n "mist.popupWindows.unlockMasterPassword.title"}}</h1>
 
+            <h3 class="enterH3">OTA SCAN WILL TAKE FEW MOMENTS TO SHOW UP IN THE WALLET</h3>
             {{#if TemplateVar.get "unlocking"}}
                 <h2 style="background: #fff!important;">{{i18n "mist.popupWindows.unlockMasterPassword.unlocking"}}</h2>
             {{else}}
-
                 <p class="passwordPic"></p>
                 <div class="errorDiv">
                     <input type="{{passwordInputType}}" placeholder="{{i18n 'mist.popupWindows.unlockMasterPassword.enterPassword'}}" class="password">
@@ -17,6 +17,8 @@
                     <button class="cancel" style=" color: #c6cdb7; width: 75px; height: 26px; line-height: 26px; font-weight: 400; border: 1px solid #c6cdb7; border-radius: 50px; margin-right: 0;" type="button">{{i18n "buttons.cancel"}}</button>
                     <button class="ok dapp-primary-button" style=" color: #fff; width: 75px; height: 28px; line-height: 28px; border-radius: 50px; margin-left: 15px; background-image: linear-gradient(0deg, #1a90fc 0%, #00d2ff 100%);" type="submit">{{i18n "buttons.ok"}}</button>
                 </div>
+
+
             {{/if}}
         </form>
 
