--- a/interface/client/templates/popupWindows/requestAccount.html
+++ b/interface/client/templates/popupWindows/requestAccount.html
@@ -16,7 +16,7 @@
                         </div>
                     </div>
                 {{else}}
-                    <h2>{{i18n "mist.popupWindows.requestAccount.creating"}}</h2>
+                    <h2 style="background: #ffffff!important;">{{i18n "mist.popupWindows.requestAccount.creating"}}</h2>
                 {{/if}}
             {{else}}
                 <div class="field-container">
@@ -28,11 +28,12 @@
                         {{/if}}
 
                     </div>
-                    <div class="errorDiv">
+                    <div class="errorDiv" style="position: relative;">
                         <input type="{{passwordInputType}}" placeholder="{{i18n 'mist.popupWindows.requestAccount.enterPassword'}}" class="password" style="background: white;">
                         {{#if TemplateVar.get "passwordLow"}}
                             <p class="errorP">{{i18n "mist.popupWindows.requestAccount.errors.passwordTooShort"}}</p>
                         {{/if}}
+                        <em class="showPassIco"></em>
                     </div>
                     <div class="errorDiv">
                         <input type="{{passwordInputType}}" placeholder="{{i18n 'mist.popupWindows.requestAccount.repeatPassword'}}" class='password-repeat' style="background: white;">
@@ -41,10 +42,10 @@
                         {{/if}}
                     </div>
                 </div>
-                <div class="show-password-container">
-                    <input type="checkbox" name="elements_input_bool" class="show-password abi-input" style="background: white;margin-left: 0!important;">
-                    <label for="show-password">{{i18n "mist.popupWindows.onboarding.buttons.showPassword"}}</label>
-                </div>
+                <!--<div class="show-password-container">-->
+                    <!--<input type="checkbox" name="elements_input_bool" class="show-password abi-input" style="background: white;margin-left: 0!important;">-->
+                    <!--<label for="show-password">{{i18n "mist.popupWindows.onboarding.buttons.showPassword"}}</label>-->
+                <!--</div>-->
                 <div class="dapp-modal-buttons" style="background: white!important;width: 170px;margin: 50px auto 0;">
                     <button class="cancel" type="button" style=" color: #c6cdb7; width: 75px; height: 26px; line-height: 26px; font-weight: 400; border: 1px solid #c6cdb7; border-radius: 50px; margin-right: 0;">{{i18n "buttons.cancel"}}</button>
                     <button class="ok dapp-primary-button" style=" color: #fff; width: 75px; height: 28px; line-height: 28px; border-radius: 50px; margin-left: 15px; background-image: linear-gradient(0deg, #1a90fc 0%, #00d2ff 100%);" type="submit">{{i18n "buttons.ok"}}</button>
