add password reminder

--- a/interface/client/styles/animations.import.less
+++ b/interface/client/styles/animations.import.less
@@ -150,8 +150,58 @@ aside.sidebar {
     background-size: 100%;
     width: 150px;
     height: 150px;
-    margin: 80px auto 10px;
+    margin: 70px auto 10px;
 }
-
-
+.checkPassword{
+    width: 470px;
+    display: inline-block;
+    height: 60px;
+    position: relative;
+    left: 0;
+    top: 0;
+    margin: 25px auto 30px auto;
+    label{
+        width: 100%;
+        display: inline-block;
+        text-align: left;
+        input{
+            vertical-align: middle;
+            margin-right: 5px;
+        }
+    }
+    .password-check{
+        width: 470px;
+        border-bottom: solid 1px #ccc6c6;
+        padding-left: 0;
+        margin-top: 5px;
+        font-size: 14px;
+        line-height: 32px;
+    }
+    p{
+        position: absolute;
+        top: 70px;
+        left: 0;
+        text-align: left;
+        em{
+            background: url("/images/checkIco.png") no-repeat;
+            background-size: 100%;
+            width: 14px;
+            height: 14px;
+            display: inline-block;
+            vertical-align: middle;
+        }
+        span{
+            color: #929cb8;
+            font-size: 12px;
+            margin-left: 5px;
+        }
+    }
+}
+.passwordReminder-p{
+    font-size: 16px;
+    text-align: left;
+    .passwordReminder-cont{
+        color: #1a90fc;
+    }
+}
 
