--- a/interface/client/templates/popupWindows/inputAccountPassword.html
+++ b/interface/client/templates/popupWindows/inputAccountPassword.html
@@ -12,8 +12,13 @@
                     <input type="{{passwordInputType}}" placeholder="{{i18n 'mist.popupWindows.unlockMasterPassword.enterPassword'}}" class="password">
                     <em class="showPassIco"></em>
                     <p class="errorP"></p>
+
+                    {{#if TemplateVar.get "reminder"}}
+                        <p class="passwordReminder-p"><span class="passwordReminder-tit">Password Reminder：</span> <span class="passwordReminder-cont">{{TemplateVar.get "reminder"}}</span></p>
+                    {{/if}}
+
                 </div>
-                <div class="dapp-modal-buttons" style="background: white!important;width: 170px;margin: 100px auto 0;">
+                <div class="dapp-modal-buttons" style="background: white!important;width: 170px;margin: 50px auto 0;">
                     <button class="cancel" style=" color: #c6cdb7; width: 75px; height: 26px; line-height: 26px; font-weight: 400; border: 1px solid #c6cdb7; border-radius: 50px; margin-right: 0;" type="button">{{i18n "buttons.cancel"}}</button>
                     <button class="ok dapp-primary-button" style=" color: #fff; width: 75px; height: 28px; line-height: 28px; border-radius: 50px; margin-left: 15px; background-image: linear-gradient(0deg, #1a90fc 0%, #00d2ff 100%);" type="submit">{{i18n "buttons.ok"}}</button>
                 </div>
