--- a/interface/client/templates/popupWindows/sendTransactionConfirmation.html
+++ b/interface/client/templates/popupWindows/sendTransactionConfirmation.html
@@ -166,10 +166,14 @@
                     <h2>{{i18n "mist.popupWindows.sendTransactionConfirmation.unlocking"}}</h2>
                 {{else}}
 
-                    <!--<input type="password" placeholder="{{i18n 'mist.popupWindows.sendTransactionConfirmation.enterPassword'}}"-->
-                           <!--disabled="{{#unless isInputPassword}}true{{/unless}}"-->
-                    <!--/>-->
-                <p style="font-size: 12px;">Please confirm this transaction on your ledger first and click "Send Transaction"</p>
+                    {{#if isInputPassword}}
+                        <input type="password" placeholder="{{i18n 'mist.popupWindows.sendTransactionConfirmation.enterPassword'}}" style="width: 100%;"/>
+                        {{#if TemplateVar.get "reminder"}}
+                            <p class="passwordReminder-p"><span class="passwordReminder-tit">Password Reminder：</span> <span class="passwordReminder-cont">{{TemplateVar.get "reminder"}}</span></p>
+                        {{/if}}
+                        {{else}}
+                        <p style="font-size: 12px;">Please confirm this transaction on your ledger first and click "Send Transaction"</p>
+                    {{/if}}
 
                     <div class="dapp-modal-buttons" style="padding-bottom: 20px;">
                         <button class="cancel" type="button" style="width: 75px;height: 28px; line-height: 28px; font-weight: 400; border: 1px solid #c6cdb7; border-radius: 50px; margin-right: 0; color: #c6cdb7;">{{i18n "buttons.cancel"}}</button>
