--- a/interface/client/styles/popupWindows.import.less
+++ b/interface/client/styles/popupWindows.import.less
@@ -73,6 +73,14 @@
         &.dapp-small {
             background: linear-gradient(transparent 50%, @colorGrayLight 70%);
         }
+        .ledger {
+            width: 100% !important;
+            border: 0;
+            font-size: 12px;
+            color: #3e465c;
+            opacity: 1!important;
+
+        }
 	}
 
 	.info.dapp-error{
@@ -606,3 +614,23 @@
 body.app-blur .popup-windows.connect-account .cards-container .switch-card ul::after {
 	background: -webkit-linear-gradient(top, rgba(246, 246, 246, 0), rgba(246, 246, 246, 1));
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
