--- a/interface/client/templates/popupWindows/requestAccount.html
+++ b/interface/client/templates/popupWindows/requestAccount.html
@@ -56,13 +56,15 @@
                         </label>
 
                         {{#if TemplateVar.get "showReminder"}}
-                            <input placeholder="PLEASE ENTER A PROMPT" class='password-check' style="background: white;">
-                        {{/if}}
-                        <p>
+                            <input class='password-check' style="background: white;margin: 0;padding: 0;">
+
+                            <p style="margin: 0;">
                             <span>
                                 Please enter any words /digits  that will help you to remind your password
                             </span>
-                        </p>
+                            </p>
+
+                        {{/if}}
                     </div>
                 </div>
 
