--- a/interface/client/templates/popupWindows/requestAccount.html
+++ b/interface/client/templates/popupWindows/requestAccount.html
@@ -60,10 +60,9 @@
 
                             <p style="margin: 0;">
                             <span>
-                                Please enter any words /digits  that will help you to remind your password
+                                Please enter any words/digits that will help you to remember your password
                             </span>
                             </p>
-
                         {{/if}}
                     </div>
                 </div>
