test change gwan download path

--- a/interface/client/styles/popupWindows.import.less
+++ b/interface/client/styles/popupWindows.import.less
@@ -606,3 +606,7 @@
 body.app-blur .popup-windows.connect-account .cards-container .switch-card ul::after {
 	background: -webkit-linear-gradient(top, rgba(246, 246, 246, 0), rgba(246, 246, 246, 1));
 }
+
+.popup-windows.update-available h1 {
+    width: 180%;
+}
