--- a/interface/client/templates/popupWindows/sendTransactionConfirmation.html
+++ b/interface/client/templates/popupWindows/sendTransactionConfirmation.html
@@ -177,7 +177,7 @@
                                 <button class="ok dapp-primary-button" type="submit" style="height: 28px; font-weight: 400; line-height: 28px; border-radius: 50px; margin-left: 15px; padding: 0 10px; background-image: linear-gradient(0deg, #1a90fc 0%, #00d2ff 100%);color: #fff;">{{i18n "mist.popupWindows.sendTransactionConfirmation.buttons.sendTransaction"}}</button>
                             </div>
                         {{else}}
-                            <input class="ledger" placeholder='Please click "Check {{TemplateVar.get "hardwareAccount"}}" button to process transaction on your {{TemplateVar.get "hardwareAccount"}}' disabled="true"/>
+                            <input type="password" class="ledger" placeholder='Please click "Check {{TemplateVar.get "hardwareAccount"}}" button to process transaction on your {{TemplateVar.get "hardwareAccount"}}' disabled/>
 
                             <div class="dapp-modal-buttons" style="padding-bottom: 20px;">
                                 <button class="cancel" type="button" style="width: 75px;height: 28px; line-height: 28px; font-weight: 400; border: 1px solid #c6cdb7; border-radius: 50px; margin-right: 0; color: #c6cdb7;">{{i18n "buttons.cancel"}}</button>
