--- a/interface/client/templates/popupWindows/onboardingScreen.html
+++ b/interface/client/templates/popupWindows/onboardingScreen.html
@@ -163,6 +163,21 @@
     {{/if}}
 </template>
 
+<template name="popupWindows_onboardingScreen_importEthAccount">
+    <h1>Already have a Ethereum wallet keystore?</h1>
+    <div class="col col-6 col-left">
+        <p>Please drag and drop your Ethereum wallet keystore file to import.</p>
+    </div>
+    {{#if TemplateVar.get "filePath"}}
+        <div class="col col-6">
+            <span class="dapp-identicon dapp-icon-loading"></span>
+            <h2 style="display: block; text-align: center;">{{i18n "mist.popupWindows.onboarding.importing"}}</h2>
+        </div>
+    {{else}}
+        <div class="col col-6 dropable"> {{i18n "mist.popupWindows.onboarding.dropFilesHere"}}</div>
+    {{/if}}
+</template>
+
 
 <template name="popupWindows_onboardingScreen_password">
     <h1> {{i18n "mist.popupWindows.onboarding.protectTitle"}} </h1>
