--- a/interface/client/templates/popupWindows/sendTransactionConfirmation.html
+++ b/interface/client/templates/popupWindows/sendTransactionConfirmation.html
@@ -13,160 +13,160 @@
                 {{/if}}
 
                 <div class="container">
-                <div class="inner-container">
-                    <div class="transaction-parties">
-                    <div>
-                        {{#if TemplateVar.get "fromIsContract"}}
-                            <i class="overlap-icon icon-doc"></i>
-                        {{else}}
-                            <i class="overlap-icon icon-key"></i>
-                        {{/if}}
-                        {{> dapp_identicon identity=from class="dapp-large"}}
-                        <br>
-                        <span class="simptip-position-bottom simptip-movable" data-tooltip="{{from}}">{{shortenAddress from}}</span>
-                    </div>
-                    <div class="connection">
-                        <div class="amount">
-                            {{{totalAmount}}} <span class="unit">WAN</span>
+                    <div class="inner-container">
+                        <div class="transaction-parties">
+                            <div>
+                                {{#if TemplateVar.get "fromIsContract"}}
+                                    <i class="overlap-icon icon-doc"></i>
+                                {{else}}
+                                    <i class="overlap-icon icon-key"></i>
+                                {{/if}}
+                                {{> dapp_identicon identity=from class="dapp-large"}}
+                                <br>
+                                <span class="simptip-position-bottom simptip-movable" data-tooltip="{{from}}">{{shortenAddress from}}</span>
+                            </div>
+                            <div class="connection">
+                                <div class="amount">
+                                    {{{totalAmount}}} <span class="unit">WAN</span>
+                                </div>
+                                {{#if TemplateVar.get "executionFunction" }}
+                                    <div class='function-signature {{#if TemplateVar.get "hasSignature"}} has-signature {{/if}} '>
+                                        {{TemplateVar.get "executionFunction"}}
+                                    </div>
+                                {{/if}}
+                            </div>
+
+                            <div>
+                                {{#if to}}
+                                    {{#if TemplateVar.get "toIsContract"}}
+                                        <i class="overlap-icon icon-doc"></i>
+                                    {{else}}
+                                        <i class="overlap-icon icon-key"></i>
+                                    {{/if}}
+                                    {{> dapp_identicon identity=to class="dapp-large"}}
+                                    <br>
+                                    <a href="http://explorer.wanchain.org/block/addr/{{to}}" class="simptip-position-bottom simptip-movable" data-tooltip="{{to}}" target="_blank">{{shortenAddress to}}</a>
+                                {{else}}
+                                    <i class="circle-icon icon-doc"></i>
+                                    <br>
+                                    <span>{{i18n "mist.popupWindows.sendTransactionConfirmation.createContract"}}</span>
+                                {{/if}}
+                            </div>
                         </div>
-                        {{#if TemplateVar.get "executionFunction" }}
-                            <div class='function-signature {{#if TemplateVar.get "hasSignature"}} has-signature {{/if}} '>
-                                    {{TemplateVar.get "executionFunction"}}
-                            </div>
-                        {{/if}}
-                    </div>
 
-                    <div>
-                        {{#if to}}
-                            {{#if TemplateVar.get "toIsContract"}}
-                                <i class="overlap-icon icon-doc"></i>
+                        {{#if transactionInvalid}}
+                            <p class="info dapp-error">
+                                {{i18n "mist.popupWindows.sendTransactionConfirmation.estimatedGasError"}}
+                            </p>
+                        {{else}}
+                            {{#unless $eq (TemplateVar.get "gasError") "notEnoughGas"}}
+                                {{#if $eq (TemplateVar.get "gasError") "overBlockGasLimit"}}
+                                    <div class="info dapp-error">
+                                        {{i18n "mist.popupWindows.sendTransactionConfirmation.overBlockGasLimit"}}
+                                    </div>
+                                {{else}}
+                                    {{#if $and data (TemplateVar.get "toIsContract")}}
+                                        <p class="info">
+                                            {{i18n "mist.popupWindows.sendTransactionConfirmation.contractExecutionInfo"}}
+                                        </p>
+                                    {{/if}}
+
+                                    {{#unless to}}
+                                        <p class="info">
+                                            {{i18n "mist.popupWindows.sendTransactionConfirmation.contractCreationInfo"}}
+                                        </p>
+                                    {{/unless}}
+
+                                {{/if}}
                             {{else}}
-                                <i class="overlap-icon icon-key"></i>
-                            {{/if}}
-                            {{> dapp_identicon identity=to class="dapp-large"}}
-                            <br>
-                            <a href="http://explorer.wanchain.org/block/addr/{{to}}" class="simptip-position-bottom simptip-movable" data-tooltip="{{to}}" target="_blank">{{shortenAddress to}}</a>
-                        {{else}}
-                            <i class="circle-icon icon-doc"></i>
-                            <br>
-                            <span>{{i18n "mist.popupWindows.sendTransactionConfirmation.createContract"}}</span>
-                        {{/if}}
-                    </div>
-                </div>
-
-                {{#if transactionInvalid}}
-                    <p class="info dapp-error">
-                    {{i18n "mist.popupWindows.sendTransactionConfirmation.estimatedGasError"}}
-                    </p>
-                {{else}}
-                    {{#unless $eq (TemplateVar.get "gasError") "notEnoughGas"}}
-                        {{#if $eq (TemplateVar.get "gasError") "overBlockGasLimit"}}
-                            <div class="info dapp-error">
-                                {{i18n "mist.popupWindows.sendTransactionConfirmation.overBlockGasLimit"}}
-                            </div>
-                        {{else}}
-                            {{#if $and data (TemplateVar.get "toIsContract")}}
-                                <p class="info">
-                                {{i18n "mist.popupWindows.sendTransactionConfirmation.contractExecutionInfo"}}
-                                </p>
-                            {{/if}}
-
-                            {{#unless to}}
-                                <p class="info">
-                                {{i18n "mist.popupWindows.sendTransactionConfirmation.contractCreationInfo"}}
-                                </p>
+                                <div class="info dapp-error not-enough-gas" style="cursor: pointer;">
+                                    {{{i18n "mist.popupWindows.sendTransactionConfirmation.notEnoughGas"}}}
+                                </div>
                             {{/unless}}
 
                         {{/if}}
-                    {{else}}
-                        <div class="info dapp-error not-enough-gas" style="cursor: pointer;">
-                            {{{i18n "mist.popupWindows.sendTransactionConfirmation.notEnoughGas"}}}
+
+                        <div class="fees">
+                            <ul>
+                                <li>
+                                    <div class="value">
+                                        {{i18n "mist.popupWindows.sendTransactionConfirmation.estimatedFee"}}
+                                    </div>
+                                    <div class="type">
+                                        {{#if $eq (TemplateVar.get "estimatedGas") "invalid"}}
+                                            <span class="red"><i class="icon-shield"></i> {{i18n "mist.popupWindows.sendTransactionConfirmation.transactionThrow"}}</span>
+                                        {{else}}
+
+                                            {{#if $eq (dapp_formatNumber (TemplateVar.get "estimatedGas") "0") "0"}}
+                                                <span class="red"><i class="icon-shield"></i> {{i18n "mist.popupWindows.sendTransactionConfirmation.noEstimate"}}</span>
+                                            {{else}}
+                                                {{estimatedFee}} ({{dapp_formatNumber (TemplateVar.get "estimatedGas") "0,0"}} gas)
+                                            {{/if}}
+
+
+
+                                        {{/if}}
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="value">
+                                        {{i18n "mist.popupWindows.sendTransactionConfirmation.gasLimit"}}
+                                    </div>
+                                    <div class="type">
+                                        <!---->
+                                        {{providedGas}} wan (<span class="provided-gas" contenteditable="true">{{dapp_formatNumber (TemplateVar.get 'initialProvidedGas') '0'}}</span> gas)
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="value">
+                                        {{i18n "mist.popupWindows.sendTransactionConfirmation.gasPrice"}}
+                                    </div>
+                                    <div class="type">{{dapp_formatBalance gasPrice "0,0.0[0000]" "szabo"}} {{i18n "mist.popupWindows.sendTransactionConfirmation.perMillionGas"}}</div>
+                                </li>
+                            </ul>
                         </div>
-                    {{/unless}}
 
-                {{/if}}
-
-                <div class="fees">
-                    <ul>
-                        <li>
-                            <div class="value">
-                            {{i18n "mist.popupWindows.sendTransactionConfirmation.estimatedFee"}}
-                            </div>
-                            <div class="type">
-                                {{#if $eq (TemplateVar.get "estimatedGas") "invalid"}}
-                                    <span class="red"><i class="icon-shield"></i> {{i18n "mist.popupWindows.sendTransactionConfirmation.transactionThrow"}}</span>
-                                {{else}}
-
-                                    {{#if $eq (dapp_formatNumber (TemplateVar.get "estimatedGas") "0") "0"}}
-                                        <span class="red"><i class="icon-shield"></i> {{i18n "mist.popupWindows.sendTransactionConfirmation.noEstimate"}}</span>
-                                    {{else}}
-                                        {{estimatedFee}} ({{dapp_formatNumber (TemplateVar.get "estimatedGas") "0,0"}} gas)
-                                    {{/if}}
-
-
-
-                                {{/if}}
-                            </div>
-                        </li>
-                        <li>
-                            <div class="value">
-                                {{i18n "mist.popupWindows.sendTransactionConfirmation.gasLimit"}}
-                            </div>
-                            <div class="type">
-                                <!---->
-                                {{providedGas}} wan (<span class="provided-gas" contenteditable="true">{{dapp_formatNumber (TemplateVar.get 'initialProvidedGas') '0'}}</span> gas)
-                            </div>
-                        </li>
-                        <li>
-                            <div class="value">
-                                {{i18n "mist.popupWindows.sendTransactionConfirmation.gasPrice"}}
-                            </div>
-                            <div class="type">{{dapp_formatBalance gasPrice "0,0.0[0000]" "szabo"}} {{i18n "mist.popupWindows.sendTransactionConfirmation.perMillionGas"}}</div>
-                        </li>
-                    </ul>
-                </div>
-
-                {{#if data}}
-                    {{#if showFormattedParams}}
-                        <div class="parameters">
-                            <h3>{{i18n "mist.popupWindows.sendTransactionConfirmation.parameters"}}
-                                <a href="#" class="toggle-panel">{{i18n "mist.popupWindows.sendTransactionConfirmation.showRawBytecode"}}</a>
-                            </h3>
-                            <ol>
-                            {{# each param in params}}
-                                <li>{{> dapp_output output=param }}</li>
-                            {{/each}}
-                            </ol>
-                        </div>
-                    {{else}}
-                        <div class="data">
-                            <h3>{{i18n "mist.popupWindows.sendTransactionConfirmation.data"}}
-
-                            {{# if params}}
-                                <a href="#" class="toggle-panel">{{i18n "mist.popupWindows.sendTransactionConfirmation.showDecodedParameters"}}</a>
+                        {{#if data}}
+                            {{#if showFormattedParams}}
+                                <div class="parameters">
+                                    <h3>{{i18n "mist.popupWindows.sendTransactionConfirmation.parameters"}}
+                                        <a href="#" class="toggle-panel">{{i18n "mist.popupWindows.sendTransactionConfirmation.showRawBytecode"}}</a>
+                                    </h3>
+                                    <ol>
+                                        {{# each param in params}}
+                                            <li>{{> dapp_output output=param }}</li>
+                                        {{/each}}
+                                    </ol>
+                                </div>
                             {{else}}
-                                {{#if to}}
-                                    {{#unless (TemplateVar.get "lookingUpFunctionSignature")}}
-                                        <a class="lookup-function-signature simptip-position-bottom simptip-movable" data-tooltip="{{i18n 'mist.popupWindows.sendTransactionConfirmation.lookupDataExplainer'}}"> {{i18n "mist.popupWindows.sendTransactionConfirmation.lookupData"}}
-                                        </a>
-                                    {{/unless}}
-                                {{/if}}
+                                <div class="data">
+                                    <h3>{{i18n "mist.popupWindows.sendTransactionConfirmation.data"}}
+
+                                        {{# if params}}
+                                            <a href="#" class="toggle-panel">{{i18n "mist.popupWindows.sendTransactionConfirmation.showDecodedParameters"}}</a>
+                                        {{else}}
+                                            {{#if to}}
+                                                {{#unless (TemplateVar.get "lookingUpFunctionSignature")}}
+                                                    <a class="lookup-function-signature simptip-position-bottom simptip-movable" data-tooltip="{{i18n 'mist.popupWindows.sendTransactionConfirmation.lookupDataExplainer'}}"> {{i18n "mist.popupWindows.sendTransactionConfirmation.lookupData"}}
+                                                    </a>
+                                                {{/unless}}
+                                            {{/if}}
+                                        {{/if}}
+                                    </h3>
+
+                                    <pre>{{{formattedData}}}</pre>
+                                </div>
                             {{/if}}
-                            </h3>
+                        {{/if}}
 
-                            <pre>{{{formattedData}}}</pre>
-                        </div>
-                    {{/if}}
-                {{/if}}
-
-                </div>
+                    </div>
                 </div>
                 <footer>
-                {{#if TemplateVar.get "unlocking"}}
-                    <h2>{{i18n "mist.popupWindows.sendTransactionConfirmation.unlocking"}}</h2>
-                {{else}}
+                    {{#if TemplateVar.get "unlocking"}}
+                        <h2>{{i18n "mist.popupWindows.sendTransactionConfirmation.unlocking"}}</h2>
+                    {{else}}
 
-                    {{#if isInputPassword}}
+                        {{#if isInputPassword}}
                             <input type="password" placeholder="{{i18n 'mist.popupWindows.sendTransactionConfirmation.enterPassword'}}" style="width: 100%;"/>
                             {{#if TemplateVar.get "reminder"}}
                                 <p class="passwordReminder-p"><span class="passwordReminder-tit">Password Reminder：</span> <span class="passwordReminder-cont">{{TemplateVar.get "reminder"}}</span></p>
@@ -177,15 +177,15 @@
                                 <button class="ok dapp-primary-button" type="submit" style="height: 28px; font-weight: 400; line-height: 28px; border-radius: 50px; margin-left: 15px; padding: 0 10px; background-image: linear-gradient(0deg, #1a90fc 0%, #00d2ff 100%);color: #fff;">{{i18n "mist.popupWindows.sendTransactionConfirmation.buttons.sendTransaction"}}</button>
                             </div>
                         {{else}}
-                            <input type="password" class="ledger" placeholder='Please click "CHECK LEDGER" button to process transaction on your ledger' disabled="true"/>
+                            <input type="password" class="ledger" placeholder='Please click "Check {{TemplateVar.get "hardwareAccount"}}" button to process transaction on your {{TemplateVar.get "hardwareAccount"}}' disabled/>
 
                             <div class="dapp-modal-buttons" style="padding-bottom: 20px;">
                                 <button class="cancel" type="button" style="width: 75px;height: 28px; line-height: 28px; font-weight: 400; border: 1px solid #c6cdb7; border-radius: 50px; margin-right: 0; color: #c6cdb7;">{{i18n "buttons.cancel"}}</button>
-                                <button class="ok dapp-primary-button" type="submit" style="height: 28px; font-weight: 400; line-height: 28px; border-radius: 50px; margin-left: 15px; padding: 0 10px; background-image: linear-gradient(0deg, #1a90fc 0%, #00d2ff 100%);color: #fff;">CHECK LEDGER</button>
+                                <button class="ok dapp-primary-button" type="submit" style="height: 28px; font-weight: 400; line-height: 28px; border-radius: 50px; margin-left: 15px; padding: 0 10px; background-image: linear-gradient(0deg, #1a90fc 0%, #00d2ff 100%);color: #fff;">Check {{TemplateVar.get "hardwareAccount"}}</button>
                             </div>
-                    {{/if}}
+                        {{/if}}
 
-                {{/if}}
+                    {{/if}}
                 </footer>
             {{/with}}
 
