update check wanwallet version

--- a/interface/client/templates/popupWindows/updateAvailable.html
+++ b/interface/client/templates/popupWindows/updateAvailable.html
@@ -19,7 +19,7 @@
 
                     <p>
                     <br>
-                        <ul class="no-bullets">
+                        <ul class="no-bullets" style="padding-left: 50px;">
                             <li>{{i18n "mist.popupWindows.updateAvailable.version"}}: <strong> {{version}} </strong></li>
                             <li>{{i18n "mist.popupWindows.updateAvailable.downloadURL"}}: <strong> {{url}}</strong></li>
 
